# sorosplits-contracts

./: Cargo.toml  Makefile  README.md  token_contract.wasm
contracts/deployer/: Cargo.toml
contracts/deployer/src/: splitter_tests.rs
contracts/splitter/: Cargo.toml
contracts/splitter/src/: contract.rs  errors.rs  lib.rs  storage.rs  tests.rs
contracts/splitter/src/execute/: init.rs  update_shares.rs
contracts/splitter/src/logic/: helpers.rs
contracts/splitter/src/logic/execute/: distribute_tokens.rs  transfer_tokens.rs  withdraw_allocation.rs
contracts/splitter/src/tests/: distribute.rs  helpers.rs  init.rs  lock_contract.rs  transfer_tokens.rs  update_shares.rs
scripts/: .gitignore  deploy.sh  run.sh
