[package]
name = "sorosplits-deployer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "20.0.2"

[dev_dependencies]
soroban-sdk = { version = "20.0.2", features = ["testutils"] }
sorosplits-splitter = { path = "../splitter" }

[features]
testutils = ["soroban-sdk/testutils"]
